some post and google analyist

--- a/_posts/2013-09-13-new-post.md
+++ b/_posts/2013-09-13-new-post.md
@@ -2,8 +2,8 @@
 layout: post
 title: "emacs debug c\\c++工程"
 description: "emacs debug c\\c++工程"
-category: Linux
-tags: [Linux, Emacs, Gdb, Debug]
+category: Emacs
+tags: [Linux, Emacs, Gdb, Debug, EDE]
 ---
 {% include JB/setup %}
 
@@ -14,9 +14,21 @@ emacs debug c\c++工程
 
 emacs可以很方便和gdb结合。进行debug和编译。
 
-在`ede mode`下可以通过`M-x ede-new RET`来自动创建make文件和工程信息。可以通过info文档中ede章节来学习。
+在`ede mode`下可以通过`M-x ede-new RET`来自动创建make文件和工程信息。
 
-通过`M-x compile`进行编译。`M-x debug`进行调试。
+这里ede的工程需要你输入工程类别：Make/ AutoMake/ direct AutoMake/ Simple
+
+- Make 类别会创建一个下工程文件`Project.ede`以及自动生成Makefile。
+
+- Automake: 这个与上面Make的不同指出就是除了上面两个文件之外还会生成`Makefile.am`。以及make前后的配置的`configure.am`脚本。如需要还会生成其他必要文件。
+
+- direct Automatke: 这个ede会从Automake的文件中获取相关参数，建造工程。这种方式是不能通过`M-x ede-new RET`来创建的。而是访问已有Automake文件的工程自动出发的。
+
+- Simple 这种就是一个简单的工程。可以另Semantic等emacs包来分析工程。
+
+更多详细信息可以通过info文档中ede章节来学习。
+
+通过`M-x compile`进行编译。`M-x gdb`进行调试。
 
 进入debug后相当与一个emacs整合的gdb。gdb命令依然适用。不过可以在另一个窗口直接查看当前运行到的代码以及console输出。亦可以通过光标移动到指定位置设置断点。快捷键为：`C-x SPC`。[这篇文章](http://wenku.baidu.com/view/fec27500b52acfc789ebc903.html)列举了主要有用的快捷键。
 
