--- a/_posts/2013-09-16-emacsirc.md
+++ b/_posts/2013-09-16-emacsirc.md
@@ -5,13 +5,17 @@ description: "Emacs下irc聊天以及浏览网页、收发邮件"
 category: Emacs
 tags: [Emacs, IRC, ]
 ---
+{% include JB/setup %}
 
 # IRC介绍以及ERC安装 #
 IRC: Internet Realtime Client???
+
+IRC是一种十分古老的网络聊天室，可以上溯到上[世纪80年代](http://www.google.com)。
+
 
 # 常用命令 #
 
 # 常用网站 #
 
 
-{% include JB/setup %}
+[nini]: http://www.google.com
