update post and theme

--- a/_posts/2013-09-16-emacsirc.md
+++ b/_posts/2013-09-16-emacsirc.md
@@ -12,6 +12,13 @@ IRC: Internet Realtime Client???
 
 IRC是一种十分古老的网络聊天室，可以上溯到上[世纪80年代](http://www.google.com)。
 
+IRC就是简单的聊天室。别无他用。在当下im横行的今天为什么还有人用，而且亘古常青呢？
+
+我猜测就是因为IRC秉承技术的理念。由于开源，其有庞大的社区用户做依托，ubuntu，linux，wikipedia，Emacs，无一不能找到他的身影。你可以很轻松的在irc聊天室里找到你想要的开源社区的专门聊天室。那里总是会有人给你做绝对专业的帮助。
+
+IRC的客户端数不胜数，当然开源神器Emacs自然也少不了，[ERC]()是Emacs的IRC客户端，Emacs自带客户端亦可以直接使用，不过其并非异步，功能也比ERC少。
+
+安装ERC可以直接使用el-get。
 
 # 常用命令 #
 
